# stmd

./: BUGS.TXT  CHANGES.TXT  COPYRIGHT  EXTS-HOWTO.TXT  INSTALL.TXT  JUTIL.TXT  Makefile.in  README-FIRST.TXT  README.TXT  chasenutil.c  chasenutil.h  chelate.c  chelate.h  config.h.in  config.mk.in  configure  configure.in  extsutil.c  extsutil.h  extsutil_sel.c  gifnoc.h  jutil.c  jutil.h  mapline.c  mecabutil.c  mecabutil.h  ngram.c  ngram.h  nio.c  nio.h  normalizer.c  normalizer.h  nstmsutil.c  nstmsutil.h  postag_stem.c  postagstem.h  postagutil.c  postagutil.h  sigflg.c  snowballutil.c  (+7 more)
rc.d/: jp.ac.nii.cs.getassoc.stmd.plist.in  stmd-sl.in  stmd.in
t/: check.c  chk  test1.txt  tst  tst1.xml  tst2.xml  tst3.xml  tst4.xml  tst5.xml  tst6.xml  tst7.xml  tst8.xml  tstC.xml
